--- a/html/chat.html
+++ b/html/chat.html
@@ -14,11 +14,17 @@
         <p class="chat-p">화가콩</p>
     </div>
     <div class="chat-wrapper">
-        <ul>
-            <!-- 동적 생성 -->
-        </ul>
-        <div class="chat-input">
-            
+        <div class="chat">
+            <ul>
+                <!-- 동적 생성 -->
+            </ul>
+            <div class="chat-input">
+                <!-- <textarea placeholder="Press Enter for send message."></textarea> -->
+                <div class="chat-hello">안녕?</div>
+                <div class="chat-tough">힘들어</div>
+                <div class="chat-mission">미션을 알려줘</div>
+                <div class="chat-advantage">채식의 장점이 뭐야?</div>
+            </div>
         </div>
     </div>
 </body>
