--- a/html/meal.html
+++ b/html/meal.html
@@ -9,6 +9,7 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="meal-x"><i class='bx bx-x'></i></div>
     <div class="wrapper">
         <div class="user-time">
             <div class="meal-user">
