--- a/html/meal.html
+++ b/html/meal.html
@@ -16,7 +16,6 @@
                 <img src="/img/user-circle-solid-24.png">
             </div>
             <div class="meal-time">
-                <p id="meal-time-p">00년 0월 00일 00:00</p>
             </div>
         </div>
         <div class="meal-select">
@@ -35,5 +34,5 @@
             <i class='bx bx-check'></i>
         </div>
     </div>
-
+    <script src="/js/meal.js"></script>
 </body>
