모바일 사이즈 수정

--- a/html/chat.html
+++ b/html/chat.html
@@ -19,7 +19,7 @@
         <div class="chat-input">
             <div class="chat-hello" id="chat-hello" onclick='hello()'>안녕?</div>
             <div class="chat-tough" id="chat-tough" onclick='tough()'>힘들어</div>
-            <div class="chat-mission" id="chat-mission" onclick='mission()'>미션을 알려줘</div>
+            <div class="chat-mission" id="chat-mission" onclick='mission()'>미션</div>
             <div class="chat-advantage" id="chat-advantage" onclick='advantage()'>채식의 장점이 뭐야?</div>
         </div>
     </div>
