chat mission / meal img

--- a/html/meal.html
+++ b/html/meal.html
@@ -20,14 +20,14 @@
         </div>
         <div class="meal-select">
             <div class="meal-select-top">
-                <div class="meat"><i class='bx bx-cloud'></i></div>
-                <div class="poultry"><i class='bx bx-cloud'></i></div>
-                <div class="fish"><i class='bx bx-cloud'></i></div>
+                <div class="meat"><img src="/img/vege_2.png"></div>
+                <div class="poultry"><img src="/img/vege_3.png"></div>
+                <div class="fish"><img src="/img/vege_4.png"></div>
             </div>
             <div class="meal-select-bottom">
-                <div class="egg"><i class='bx bx-cloud'></i></div>
-                <div class="dairy"><i class='bx bx-cloud'></i></div>
-                <div class="vegetable"><i class='bx bx-cloud'></i></div>
+                <div class="egg"><img src="/img/vege_5.png"></div>
+                <div class="dairy"><img src="/img/vege_6.png"></div>
+                <div class="vegetable"><img src="/img/vege_1.png"></div>
             </div> 
         </div>
         <div class="meal-select-ok">
