--- a/html/chat.html
+++ b/html/chat.html
@@ -9,7 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <title>CHAT</title>
 </head>
-<body>
+<body class="body">
     <div class="chat-bar">
         <i class='bx bx-left-arrow-alt'></i>
         <p class="chat-p">화가콩</p>
