--- a/html/chat.html
+++ b/html/chat.html
@@ -10,6 +10,13 @@
     <title>CHAT</title>
 </head>
 <body class="body">
+    <div>
+        <dialog id='missionDialog'>
+            <h3>화가콩의 미션</h3>
+            <p id="msdiatxt"></p>
+            <div class="missionbtn"><div class="missionClose" onclick="missionClose()"><i class='bx bx-x'></i></div><div class="missionOk" onclick="missionOk()"><i class='bx bx-check'></i></div></div>
+        </dialog>
+    </div>
     <div class="chat-bar">
         <i class='bx bx-left-arrow-alt'></i>
         <p class="chat-p">화가콩</p>
