--- a/html/meal.html
+++ b/html/meal.html
@@ -20,14 +20,14 @@
         </div>
         <div class="meal-select">
             <div class="meal-select-top">
-                <div class="meat" onclick="meat()"><img src="/img/vege_2.png"></div>
-                <div class="poultry" onclick="poultry()"><img src="/img/vege_3.png"></div>
-                <div class="fish" onclick="fish()"><img src="/img/vege_4.png"></div>
+                <div class="ms meat" onclick="mechk()"><img src="/img/vege_2.png"></div>
+                <div class="ms poultry" onclick="pochk()"><img src="/img/vege_3.png"></div>
+                <div class="ms fish" onclick="fichk()"><img src="/img/vege_4.png"></div>
             </div>
             <div class="meal-select-bottom">
-                <div class="egg" onclick="egg()"><img src="/img/vege_5.png"></div>
-                <div class="dairy" onclick="dairy()"><img src="/img/vege_6.png"></div>
-                <div class="vegetable" onclick="vegetable()"><img src="/img/vege_1.png"></div>
+                <div class="ms egg" onclick="egchk()"><img src="/img/vege_5.png"></div>
+                <div class="ms dairy" onclick="dachk()"><img src="/img/vege_6.png"></div>
+                <div class="ms vegetable" onclick="vechk()"><img src="/img/vege_1.png"></div>
             </div> 
         </div>
         <a href="javascript:history.back();" class="select-a"><div class="meal-select-ok" id="mealOk" onclick="mealok()">
