--- a/html/meal.html
+++ b/html/meal.html
@@ -13,21 +13,21 @@
     <div class="wrapper">
         <div class="user-time">
             <div class="meal-user">
-                <img src="/img/user-circle-solid-24.png">
+                <img src="../img/user-circle-solid-24.png">
             </div>
             <div class="meal-time">
             </div>
         </div>
         <div class="meal-select">
             <div class="meal-select-top">
-                <div class="ms meat" onclick="mechk()"><img src="/img/vege_2.png"></div>
-                <div class="ms poultry" onclick="pochk()"><img src="/img/vege_3.png"></div>
-                <div class="ms fish" onclick="fichk()"><img src="/img/vege_4.png"></div>
+                <div class="ms meat" onclick="mechk()"><img src="../img/vege_2.png"></div>
+                <div class="ms poultry" onclick="pochk()"><img src="../img/vege_3.png"></div>
+                <div class="ms fish" onclick="fichk()"><img src="../img/vege_4.png"></div>
             </div>
             <div class="meal-select-bottom">
-                <div class="ms egg" onclick="egchk()"><img src="/img/vege_5.png"></div>
-                <div class="ms dairy" onclick="dachk()"><img src="/img/vege_6.png"></div>
-                <div class="ms vegetable" onclick="vechk()"><img src="/img/vege_1.png"></div>
+                <div class="ms egg" onclick="egchk()"><img src="../img/vege_5.png"></div>
+                <div class="ms dairy" onclick="dachk()"><img src="../img/vege_6.png"></div>
+                <div class="ms vegetable" onclick="vechk()"><img src="../img/vege_1.png"></div>
             </div> 
         </div>
         <a href="javascript:history.back();" class="select-a"><div class="meal-select-ok" id="mealOk" onclick="mealok()">
@@ -35,12 +35,12 @@
         </div></a>
     </div>
     <script>
-        me = 0;
-        po = 0;
-        fi = 0;
-        eg = 0;
-        da = 0;
-        ve = 0;
+        me = false;
+        po = false;
+        fi = false;
+        eg = false;
+        da = false;
+        ve = false;
     </script>
-    <script src="/js/meal.js"></script>
+    <script src="../js/meal.js"></script>
 </body>
