--- a/html/chat.html
+++ b/html/chat.html
@@ -30,6 +30,6 @@
             <div class="chat-advantage" id="chat-advantage" onclick='advantage()'>채식의 장점이 뭐야?</div>
         </div>
     </div>
-    <script type="text/javascript" src="/js/chat.js"></script>
+    <script type="text/javascript" src="../js/chat.js"></script>
 </body>
 </html>
